<resources>
    <string name="flux">
        Flux
    </string>
    <string name="fav_tv">
        Избранное
    </string>
    <string name="search_icon">Search Icon</string>
    <string name="search_hint">Поиск...</string>
    <string name="close_search">Close search</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_icon">New chat</string>
    <string name="new_message">Новое сообщение</string>
    <string name="new_group">Новая группа</string>
    <string name="new_contact">Новый контакт</string>
    <string name="send_message">Send message</string>
    <string-array name="chats_tabs">
        <item>Все</item>
        <item>Чаты</item>
        <item>Группы</item>
    </string-array>

    <string-array name="login_tabs">
        <item>По телефону</item>
        <item>По почте</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Телефон</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="invalid_username">Not a valid phone</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth_restore_password">Восстановить пароль</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="auth_init_failed">Не удалось инициализировать авторизацию</string>
    <string name="oauth_browser_not_found">Не найден браузер для OAuth входа</string>
    <string name="oauth_error">OAuth вход не удался</string>
    <string name="oauth_missing_callback_data">OAuth callback не содержит данных входа</string>
    <string name="passkey_cancelled">Вход с Passkey отменен</string>
    <string name="phone_input_confirm">подтвердить</string>
    <string name="phone_input_otp_label">Код подтверждения</string>
    <string name="phone_input_otp_hint">123-456</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="add">Добавить</string>
    <string name="select_chat">Выберите чат</string>
    <string name="group_name_hint">Название группы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_header">Контакты</string>
</resources>
