<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/flux"
        android:layout_width="56dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/manjari_bold"
        android:gravity="top"
        android:text="@string/flux"
        android:textAppearance="@style/flux"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="@string/search_icon"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/newChat"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fi_rr_search" />

    <ImageView
        android:id="@+id/newChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit" />

    <TextView
        android:id="@+id/fav_tv"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:gravity="top"
        android:text="@string/fav_tv"
        android:textAppearance="@style/fav_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flux" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecycler"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav_tv" />

    <ru.flux.android.core.ui.SegmentTabsView
        android:id="@+id/segment_tabs"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        app:tabs="@array/chats_tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoritesRecycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segment_tabs" />



</androidx.constraintlayout.widget.ConstraintLayout>
