<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/bg_login_fragment"
    android:elevation="3dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".SignUpAuthFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="Зарегистрироваться"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Зарегистрироваться" />


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="@string/prompt_phone"
        android:background="@drawable/bg_input_field"
        android:drawableStart="@drawable/phone_rotary_1"
        android:drawablePadding="11dp"
        android:elevation="4dp"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:paddingStart="18dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/bg_input_field"
        android:drawableStart="@drawable/lock_1"
        android:drawablePadding="11dp"
        android:elevation="4dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="Повторите пароль"
        android:background="@drawable/bg_input_field"
        android:drawableStart="@drawable/lock_1"
        android:drawablePadding="11dp"
        android:elevation="4dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:strokeColor="@color/btn_login_stroke"
        app:strokeWidth="1.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="Восстановить пароль"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Регистрация"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>