<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/bg_login_fragment"
    android:elevation="3dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".WelcomeAuthFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manjari_bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/flux" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:elevation="4dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:elevation="4dp"
        android:enabled="false"
        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#FFE0E0E0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="или"
            android:textColor="#FF9E9E9E"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#FFE0E0E0" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="17dp"
        android:elevation="4dp"
        android:text="Войти с помощью Passkey"
        app:icon="@drawable/passkey"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="17dp"
        android:elevation="4dp"
        android:text="Войти с помощью GitHub"
        app:icon="@drawable/github"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="24dp"
        android:elevation="4dp"
        android:text="Войти с помощью Google"
        app:icon="@drawable/google"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton3" />


</androidx.constraintlayout.widget.ConstraintLayout>