<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/bg_login_fragment"
    android:elevation="3dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/nunito_sans"
        android:text="Войти"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/segment_tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Войти" />

    <ru.flux.android.ui.SegmentTabsView
        android:id="@+id/segment_tabs"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:tabs="@array/login_tabs" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/bg_input_field"
        android:drawableStart="@drawable/phone_rotary_1"
        android:drawablePadding="11dp"
        android:elevation="4dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segment_tabs" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/bg_input_field"
        android:drawableStart="@drawable/lock_1"
        android:drawablePadding="11dp"
        android:elevation="4dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:strokeColor="@color/btn_login_stroke"
        app:strokeWidth="1.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Восстановить пароль"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Регистрация"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#FFE0E0E0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="или"
            android:textColor="#FF9E9E9E"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#FFE0E0E0" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="17dp"
        android:elevation="4dp"
        android:text="Войти с помощью Passkey"
        app:icon="@drawable/passkey"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="17dp"
        android:elevation="4dp"
        android:text="Войти с помощью GitHub"
        app:icon="@drawable/github"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/Widget.App.Button.FluxButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="24dp"
        android:elevation="4dp"
        android:text="Войти с помощью Google"
        app:icon="@drawable/google"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>